# EmuGator

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  input.css  mainworker.js  package-lock.json  package.json  rust-toolchain.toml  swcrc  worker.js
.github/workflows/: build-and-test.yaml  deploy.yml
assets/: mainworker.js
emugator_cli/: Cargo.toml
emugator_cli/src/: example_program.s  main.rs  tester.rs
emugator_core/: Cargo.toml
emugator_core/src/: lib.rs  utils.rs
emugator_core/src/assembler/: address.rs  assembled_program.rs  lexer.rs  mod.rs  program.rs
emugator_core/src/emulator/: controller_common.rs  cve2_tests.rs  data_memory.rs  five_stage_tests.rs  fuzz_test.rs  memory_module.rs  mod.rs  register_file.rs  uart.rs
emugator_core/src/emulator/cve2/: controller.rs  datapath.rs  mod.rs  pipeline.rs
emugator_core/src/emulator/five_stage/: controller.rs  datapath.rs  hazard_detection.rs  mod.rs  pipeline.rs
emugator_core/src/isa/: definitions.rs  instruction.rs
emugator_web/: Cargo.toml  Dioxus.toml  input.css  package-lock.json  package.json
emugator_web/assets/: tokenProvider.js
emugator_web/src/: instructions.json  main.rs
emugator_web/src/code_editor/: language.rs  mod.rs  monaco_editor.rs
emugator_web/src/interface/: data_views.rs  datapath_visualization.rs  instruction_views.rs  memory_view.rs  mod.rs  navbar.rs  register_view.rs  run_buttons.rs  uart_view.rs
emugator_web/src/interface/help_panel/: assembler_page_view.rs  five_stage_view.rs  interface_page_view.rs  intro_page_view.rs  mod.rs  page_not_found_view.rs  quick_start_view.rs  two_stage_view.rs  uart_view.rs
emugator_web/src/interface/pipeline_visualization/: cve2_visualization.rs  five_stage_visualization.rs  mod.rs
palindrome/: student-a.s  student-b.s  student-c.s  student-d.s
palindrome/test-dir/test1/: finalstate.json
palindrome/test-dir/test2/: finalstate.json
palindrome/test-dir/test3/: finalstate.json  input.txt
palindrome/test-dir/test4/: finalstate.json
palindrome/test-dir/test5/: finalstate.json
src/: main.rs  utils.rs
src/assembler/: assembled_program.rs  assembler.rs  assembler_error.rs  lexer.rs  mod.rs  rpn.rs  tests.rs
src/code_editor/: mod.rs  monaco_editor.rs
src/emulator/: controller.rs  datapath.rs  handlers.rs  mod.rs  pipeline.rs  register_file.rs  tests.rs  uart.rs
src/interface/: data_views.rs  datapath_visualization.rs  mod.rs  register_view.rs  run_buttons.rs  uart_view.rs
src/isa/: definitions.rs  instruction.rs  mod.rs
src/uart/: mod.rs
test-files/: beta-demo.s  breakpoints-test.s  prototype-demo.s  prototype.s  syntax-check.s
test-files/test-dir/test1/: expectedstate.json
test-files/test-dir/test2/: expectedstate.json
