[package]
name = "emugator-cli"
version = "0.1.0"
authors = ["Liam Rosenfeld <me@liamrosenfeld.com>"]
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
emugator-core = { path = "../emugator_core" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
hex = { version = "0.4.3", features = ["serde"] }
