[package]
name = "emugator-cli"
version = "0.1.0"
authors = ["Liam Rosenfeld <me@liamrosenfeld.com>"]
edition = "2024"

[dependencies]
emugator-core = { path = "../emugator_core" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.29"
color-eyre = "0.6"
