[package]
name = "emugator-web"
version = "0.1.0"
authors = ["Liam Rosenfeld <me@liamrosenfeld.com>"]
edition = "2024"

[dependencies]
emugator-core = { path = "../emugator_core" }

# dioxus
dioxus = { version = "0.6", features = ["web", "router"] }
dioxus-sdk = { version = "0.6", features = ["timing"] }
dioxus-logger = "0.6"

# text editor
monaco = "0.5"

# wasm stuff
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Blob",
    "Url",
    "HtmlAnchorElement",
    "HtmlElement",
    "Document",
    "Window",
    "Element",
    "CssStyleDeclaration",
    "HtmlBodyElement",
] }
js-sys = "0.3"

# icons
dioxus-free-icons = { version = "0.9", features = [
    "font-awesome-regular",
    "font-awesome-solid",
    "lucide",
] }

# json
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
